# netguardian

./: .clinerules  .gitignore  CMakeLists.txt  MEMORY_BANK_INFO.md  PACKET_CAPTURE_IMPLEMENTATION.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  QUICKSTART.md  README.md
cmake/: NetGuardianConfig.cmake.in
cmake/modules/: FindPCAP.cmake
docs/: ARCHITECTURE_REFACTORING.md  CODE_QUALITY_REVIEW.md  MEMORY_BANK_INFO.md  MULTITHREADING_ARCHITECTURE.md  MULTITHREADING_OPTIMIZATION.md  PACKET_CAPTURE_IMPLEMENTATION.md  PIPELINE_REFACTORING.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  REFACTORING_SUMMARY.md  SNORT3_PIPELINE_ANALYSIS.md  SNORT3_TCP_REASSEMBLY_ANALYSIS.md
docs/developer/: README.md
docs/user/: README.md
examples/: CMakeLists.txt  basic_capture.cpp  decoder_demo.cpp  example_alert_system.cpp  example_dns_parser.cpp  example_http_parser.cpp  example_ip_reassembly.cpp  example_tcp_reassembly.cpp  flow_management_demo.cpp  flow_tracking_demo.cpp  matcher_demo.cpp  netguardian.conf.example  protocol_identification_demo.cpp  rule_parser_demo.cpp
examples/configs/: netguardian.conf.example
include/alerts/: alert.h  alert_generator.h  alert_manager.h  alert_output.h
include/core/: app_protocol_identifier.h  detection_engine.h  detection_engine_old.h  flow.h  mt_detection_engine.h  packet.h  packet_capture.h  packet_context.h  packet_pipeline.h  packet_processor.h  processor_factory.h  protocol_parser.h  protocol_types.h  statistics_collector.h  version.h.in
include/decoders/: decoder_base.h  dns_anomaly_detector.h  dns_decoder.h  dns_parser.h  dns_transaction.h  ethernet_decoder.h  http_decoder.h  http_parser.h  ipv4_decoder.h  packet_info.h  protocol_headers.h  tcp_decoder.h  udp_decoder.h
include/flow/: concurrent_flow_table.h  flow.h  flow_key.h  flow_manager.h  flow_table.h  tcp_state.h  tcp_state_machine.h
include/matchers/: content_matcher.h  matcher.h  multi_pattern_matcher.h  network_matcher.h  pcre_matcher.h  rule_matcher.h
include/processors/: anomaly_detection_processor.h  dns_parsing_processor.h  flow_tracking_processor.h  http_parsing_processor.h  ip_reassembly_processor.h  protocol_parsing_processor.h  rule_detection_processor.h  tcp_reassembly_processor.h
include/reassembly/: ip_fragment.h  ipv4_reassembler.h  ipv6_reassembler.h  tcp_reassembler.h  tcp_segment.h
include/rules/: rule.h  rule_manager.h  rule_parser.h
include/utils/: any.h  cxx11_compat.h  optional.h  packet_queue.h  thread_pool.h
scripts/: clean.sh  generate_test_pcap.py
src/: main.cpp  main_old.cpp
src/alerts/: CMakeLists.txt
src/bridge/: CMakeLists.txt
src/core/: CMakeLists.txt  app_protocol_identifier.cpp  detection_engine_old.cpp  flow.cpp  mt_detection_engine.cpp  packet.cpp  packet_capture.cpp  protocol_parser.cpp  protocol_types.cpp
src/decoders/: CMakeLists.txt  dns_anomaly_detector.cpp  dns_decoder.cpp  dns_parser.cpp  dns_transaction.cpp  ethernet_decoder.cpp  http_decoder.cpp  http_parser.cpp  ipv4_decoder.cpp  tcp_decoder.cpp  udp_decoder.cpp
src/flow/: CMakeLists.txt  flow.cpp  flow_manager.cpp  tcp_state_machine.cpp
src/reassembly/: CMakeLists.txt  ip_fragment.cpp  ipv4_reassembler.cpp  ipv6_reassembler.cpp  tcp_reassembler.cpp  tcp_segment.cpp
src/rules/: CMakeLists.txt  rule.cpp  rule_manager.cpp  rule_parser.cpp
src/snort/: CMakeLists.txt
src/utils/: CMakeLists.txt
src/zeek/: CMakeLists.txt
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/performance/: CMakeLists.txt
tests/unit/: CMakeLists.txt
